--- a/templates/index.html
+++ b/templates/index.html
@@ -12,80 +12,78 @@
     </head>
     <body>
 
-<!-- scrape button  --> 
-        <div class="container">
-            <div class="jumbotron text-center">
-                <h1>Mission to Mars</h1>
-                <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
-						</div>
+<!--scrape button-->
+<div class="container">
+    <div class="jumbotron text-center">
+        <h1>Mission to Mars</h1>
+        <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
+                </div>
 						
 <!-- news article -->
-            
-            <div class="col-md-12">
-                <h2>Latest Mars News</h2>
-                <hr size=2>
-                <h4>{{ mars.news_title }}</h4>
-                <p>{{ mars.news_snip }}</p>
-            </div>
+<div class="row">
+<div class="col-md-12">
+    <h1 class="heading"><strong>Latest Mars News</strong>
+    <h3 class="heading">{{ mars.news_title }}</h4>
+    <p>{{ mars.news_snip }}</p>
+</div>
+</div>
             
 <!-- images -->
-            <div class="col-md-12">
-                <div class="col-md-8">
-                    <h2>Featured Mars Image</h2>
-                    <hr size=2>
-                    <img src="{{ mars.featured_image_url }}" class="img-responsive"
-                        alt="Mars Images">
-                        <br>
-                </div> 
+<div class="row">
+    <div class="col-md-8">
+        <h1 class="heading"><strong>Featured Mars Image</strong></h1>
+        <img src="{{ mars.featured_image_url }}" class="img-responsive"
+            alt="Mars Images">
+            <br>
+</div> 
+</div>
 
 <!-- weather -->
-                <div class="col-md-4">
-                    <div class="panel-body">
-                        <h4>Current Weather on Mars</h4>
-                        <hr size=2>
-                        <p>{{mars.mars_weather}}</p>
-                    </div>
-                    <div class="col-md-12">
-                            <h4>Mars Facts</h4>
-                            <hr size=2>
-                            <table border="1" class="dataframe">
-                                {{mars.fact_table|safe}}
-                            </table>  
-                    </div>
-                    
-                </div>
-            </div>
+<div class="row col-md-4">
+    <div class="border border-primary">
+        <h1 class="heading"><strong>Current Weather on Mars</strong></h4>
+        <p>{{mars.mars_weather}}</p>
+    </div>
+
+    <div class="row col-md-4">
+            <h1 class="header"><strong>Mars Facts</strong></h1>
+            <table border="1" class="dataframe">
+                {{mars.fact_table|safe}}
+            </table>  
+    </div>
+    
+</div>
+</div>
 
             
 
 <!-- Mars Hemisphere -->
-            <div class="container-fluid">
-                <br>
-                <h2 class="text-center">Mars Hemisphere</h2>
-                <hr size=2>
-                <div class="col-md-6">
-                    <div class="col-md-12">
-                        {% for pic in mars.hemisphere_image[0:2] %}           
-                            <img class = "img img-thumbnail" src="{{pic['url']}}" alt="hemisphere" style="width:50%;">
-                            <div class="caption"style="font-weight: bold;">
-                                {{pic['Title']}}
-                            </div>                                           
-                        {% endfor %}
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="col-md-12">
-                        {% for pic in mars.hemisphere_image[2:4] %}
-                                        
-                            <img src="{{pic['url']}}" alt="hemisphere" style="width:50%;">
-                            <div class="caption "style="font-weight: bold;">
-                                {{pic['Title']}}
-                            </div>                                           
-                        {% endfor %}
-                    </div>
-                </div>
-                
-            </div>
+<div class="row">
+    <br>
+    <h1 class="heading text-center"><strong>Mars Hemisphere</strong></h2>
+    <div class="col-md-6">
+        <div class="col-md-12">
+            {% for pic in mars.hemisphere_image[0:2] %}           
+                <img class = "img img-thumbnail" src="{{pic['url']}}" alt="hemisphere" style="width:50%;">
+                <div class="caption"style="font-weight: bold;">
+                    {{pic['Title']}}
+                </div>                                           
+            {% endfor %}
         </div>
-    </body>
+    </div>
+    <div class="col-md-6">
+        <div class="col-md-12">
+            {% for pic in mars.hemisphere_image[2:4] %}
+                            
+                <img src="{{pic['url']}}" alt="hemisphere" style="width:50%;">
+                <div class="caption "style="font-weight: bold;">
+                    {{pic['Title']}}
+                </div>                                           
+            {% endfor %}
+        </div>
+    </div>
+    
+</div>
+</div>
+</body>
 </html>
